# bootcampLuizaLabs

./: desafio.py  readme.md
FundamentosDePython&Lógica/: Notes.md  simple.py
FundamentosDePython&Lógica/exercicios/: caixa_inteligente.py
Fundamentos_python/exercicios/: produto_mais_popular.py
api_conceitos_fundamentais/: notes.md
apis_assincronas_fastapi/dio-blog/: blog.sqlite  database.py  main.py  notes.md  pyproject.toml  security.py
apis_assincronas_fastapi/dio-blog/controllers/: post.py
apis_assincronas_fastapi/dio-blog/models/: post.py
apis_assincronas_fastapi/dio-blog/schemas/: post.py
apis_assincronas_fastapi/dio-blog/services/: post.py
apis_assincronas_fastapi/dio-blog/src/: main.py  security.py
apis_assincronas_fastapi/dio-blog/src/controllers/: auth.py
apis_assincronas_fastapi/dio-blog/src/schemas/: post.py
apis_assincronas_fastapi/dio-blog/tests/: conftest.py
apis_assincronas_fastapi/dio-blog/tests/integrations/controllers/auth/: test_login.py
apis_assincronas_fastapi/dio-blog/tests/integrations/controllers/post/: test_create_post.py  test_delete_post.py  test_read_all.py  test_read_post.py  test_update_post.py
apis_assincronas_fastapi/dio-blog/views/: post.py
banco de dados/: boas_praticas_em_SQL.md  connect.py  dbapi.py  meu_banco.db  meu_banco.sqlite
banco de dados/images/: boas_praticas_em_SQL.md
banco_de_dados/: dbapi.py  injecao_sql.py  transacao.py
python_orientado_objetos/: notes.md  parte2.py  primeiro_programa_poo.py
python_orientado_objetos/desafio/: desafio.md  parte2.py
