[tool.poetry]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = ["Gabriel <gabrieloliveira280807@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.135.3"
uvicorn = {extras = ["standard"], version = "^0.43.0"}
databases = {extras = ["aiosqlite"], version = "^0.9.0"}
pyjwt = "^2.13.0"

pytest-asyncio = "^1.4.0"
pytest = "^9.0.3"
httpx = "^0.28.1"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"